infrastructure/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "5.99.1"
    }
  }
}
provider "aws" {
  region="ap-south-1"
}

data "aws_availability_zones" "available" {}

#VPC
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  instance_tenancy = "default"

  tags={
    Name="linkhub-vpc"
  }
}

#Public Subnets
resource "aws_subnet" "public_a" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"
  availability_zone = data.aws_availability_zones.available.names[0] # ap-south-1a
  map_public_ip_on_launch = true

  tags={
    Name="linkhub-public-a"
  }
}
resource "aws_subnet" "public_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = data.aws_availability_zones.available.names[1] # e.g., ap-south-1b
  map_public_ip_on_launch = true

  tags = {
    Name = "linkhub-public-b"
  }
}

#Private Subnets

resource "aws_subnet" "private_a" {
  vpc_id = aws_vpc.main.id
  cidr_block = "10.0.101.0/24"
  availability_zone = data.aws_availability_zones.available.names[0]

  tags={
    Name="linkhub-private-a"
  }
}
resource "aws_subnet" "private_b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.102.0/24"
  availability_zone = data.aws_availability_zones.available.names[1]

  tags = {
    Name = "linkhub-private-b"
  }
}

# Internet Gateway
resource "aws_internet_gateway" "main" {
  vpc_id=aws_vpc.main.id

  tags={
    Name="linkhub-igw"
  }
}

#NAT Gateway
resource "aws_eip" "nat"{
  domain="vpc"
  tags={
    Name="linkhub-nat-eip"
  }
}
resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id = aws_subnet.public_a.id
  depends_on = [aws_internet_gateway.main]

  tags={
    Name="linkhub-nat-gw"
  }

}

#Route Tables
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route{
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
  tags={
    Name="linkhub-public-rt"
  }
}
# Route tables for private subnets

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  route{
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main.id
  }

  tags={
    Name="linkhub-private-rt"
  }
}
# route table connecting
resource "aws_route_table_association" "public_a" {
  subnet_id      = aws_subnet.public_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_b" {
  subnet_id      = aws_subnet.public_b.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_a" {
  subnet_id      = aws_subnet.private_a.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_b" {
  subnet_id      = aws_subnet.private_b.id
  route_table_id = aws_route_table.private.id
}
